--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
+  /* not working  */
+
 }
 
 body {
@@ -19,7 +22,6 @@ body {
   align-items: center;
   justify-content: center;
   background-color: black;
-  height: 60px;
   font-family: "Times New Roman", Times, serif;
   text-shadow: 10px 2px 7px rgb(230, 218, 227);
   font-size: 20px;
@@ -30,16 +32,14 @@ body {
 
 /* brand  */
 .brand {
-  margin: 0px auto;
-  height: 50px;
   font-size: 30px;
   font-weight: 600;
-  border-top: 2px solid white;
+  border-top: 2px solid orangered;
   border-left: 5px solid white;
   border-radius: 20px;
   padding-bottom: 0px;
   padding-left: 10px;
-  margin-left: 40px;
+  margin: 10px;
   text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
     #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
     #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
@@ -82,7 +82,7 @@ body {
 
 /* nav_items start here */
 #navbarNavAltMarkup {
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .nav_item>a {
@@ -95,7 +95,6 @@ body {
   color: whitesmoke;
   text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
-
 }
 
 .nav_item>a:hover {
@@ -250,8 +249,8 @@ body {
 }
 
 .about-image {
-  width: 50%;
-  height: auto;
+  width: 100%;
+  height: fit-content;
   margin: auto;
   padding: 25px;
   transform: scaleX(-1);
@@ -262,12 +261,13 @@ body {
 .about-child-content {
   flex: 50%;
   width: 100%;
+  height: fit-content;
 }
 
 .about-me-title {
   font-family: "Times New Roman", Times, serif;
   text-align: center;
-  width: 80%;
+  width: 100%;
   margin: 30px auto;
   font-size: 35px;
   color: whitesmoke;
@@ -275,13 +275,12 @@ body {
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
 }
 
-
 .about-me-description {
   color: burlywood;
   font-style: oblique;
   font-size: 20px;
   padding: 35px;
-  width: 80%;
+  width: 100%;
   margin: auto;
 }
 
@@ -293,7 +292,7 @@ body {
   color: white;
   padding: 1.2em 30px 1.2em 75px;
   position: relative;
-  width: 80%;
+  width: 90%;
   margin: auto;
   border-radius: 20px;
 
@@ -378,7 +377,7 @@ body {
   justify-content: space-around;
   height: auto;
   width: 100%;
-  padding: 60px;
+  padding: 40px 5px;
   background-color: #000000;
   border-bottom: 1px dotted white;
 }
@@ -498,8 +497,6 @@ label {
   width: 25%;
   margin-top: 6px;
   color: whitesmoke;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
 }
 
 input,
@@ -552,11 +549,10 @@ input[type="submit"]:hover {
 #github,
 #messenger {
   font-size: 40px;
-  color: black;
   border-radius: 50%;
   margin-right: 20px;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+  color: black;
+
 }
 
 /* section footer-name */
@@ -573,30 +569,45 @@ input[type="submit"]:hover {
   border-bottom-right-radius: 30px;
 }
 
-/* Extra small devices: phones, 600px and down */
-@media only screen and (max-width: 600px) {
+/*smallest devices (phones or maybe watches, 400px and down) display none for now */
+@media only screen and (max-width: 400px) {
+  * {
+    background-color: red;
+    display: none;
+  }
+}
 
-  /* section nav_bar */
-  nav {
-    display: flex;
-    flex-direction: column;
-    height: fit-content;
-    font-size: 10px;
+/* Extra small devices: phones, 600px and down */
+@media (min-width: 400px) and (max-width: 600px) {
+
+  /* brand  */
+  .brand {
+    margin: 5px 0px;
+    font-size: 25px;
+    font-weight: 500;
   }
 
-  /* my log start here */
-  nav>div:first-child {
-    margin: 10px auto;
-    height: fit-content;
+  /* nav_items start here */
+  .nav_item>a {
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+    margin: 20px auto;
+    text-align: center;
     font-size: 20px;
-    font-weight: 400;
-    padding-left: 10px;
+
   }
 
   /* Dark mode start here */
-  nav>button:last-child {
-    margin-top: 20px auto;
+  .dark-mood:last-child {
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+    text-align: center;
+    font-size: 20px;
   }
+
+
 
   /* section Home */
   .home-container {
@@ -644,7 +655,9 @@ input[type="submit"]:hover {
 
   /* project card source from app.js */
   .card {
-    margin: 20px;
+    margin: 10px auto;
+    width: 90%;
+    height: auto;
   }
 
   .card-img-top {
@@ -665,21 +678,231 @@ input[type="submit"]:hover {
     font-size: 30px;
   }
 
-  /* form {
-    margin: auto 15px;
-  } */
 
 }
 
 
 /* Small devices:  tablets and large phones, 600px and up */
-@media only screen and (min-width: 600px) {}
+/* @media only screen and (min-width: 600px) */
+@media (min-width: 600px) and (max-width: 768px) {
 
-/* Medium devices:  tablets, 768px and up */
-@media only screen and (min-width: 768px) {}
+  /* nav_items start here */
+  .nav_item>a {
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+    text-align: center;
+  }
 
-/* Large devices: laptops and desktops, 992px and up */
-@media only screen and (min-width: 992px) {}
+  /* Dark mode start here */
+  .dark-mood:last-child {
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+    text-align: center;
+  }
 
-/* Extra large devices large laptops and desktops, 1200px and up */
-@media only screen and (min-width: 1200px) {}
+  /* section Home */
+  .home-container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .hire-me,
+  .download-resume {
+    margin: 50px auto;
+  }
+
+  /* section About */
+  .about-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about-image {
+    display: none;
+  }
+
+  */
+
+  /* styling qoute start here (Note this is for icons) */
+  .jamie-blockquote::before {
+    left: 15px;
+    top: -10px;
+  }
+
+  .jamie-blockquote::after {
+    right: 20px;
+    bottom: 15px;
+  }
+
+  /* section resume */
+  .resume-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* section projects */
+  .projects-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card {
+    margin: 10px auto;
+    width: 90%;
+    height: auto;
+  }
+
+  .card-img-top {
+    width: 100%;
+  }
+
+  /* section contact */
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+}
+
+
+/* Medium devices:  tablets, 768px to 992 */
+@media (min-width: 768px) and (max-width: 992px) {
+
+  /* nav_items start here */
+  .nav_item>a {
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+    text-align: center;
+  }
+
+  /* Dark mode start here */
+  .dark-mood:last-child {
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+    text-align: center;
+  }
+
+  /* section Home */
+  .hire-me,
+  .download-resume {
+    font-size: 15px;
+  }
+
+  .profile-pic {
+    width: 350px;
+    height: 350px;
+  }
+
+  /* section About */
+  .about-image {
+    width: 100%;
+    height: auto;
+  }
+
+  .about-me-title {
+    width: 100%;
+    font-size: 25px;
+    margin-bottom: 0%;
+  }
+
+  .about-me-description {
+    padding: 15px;
+    width: 100%;
+    font-size: 15px;
+  }
+
+  /* styling qoute */
+  .jamie-blockquote {
+    width: 100%;
+    font-size: 15px;
+  }
+
+  /* project card source from app.js */
+  .card {
+    margin: 0px 10px;
+  }
+
+  .card-img-top {
+    width: 100%;
+  }
+
+}
+
+
+/* Large devices: laptops and desktops, 992px to 1200 */
+@media (min-width: 992px) and (max-width: 1200px) {
+  .brand {
+    font-size: 25px;
+    font-weight: 600;
+  }
+
+  /* nav_item */
+  .nav_item>a {
+    font-size: 20px;
+  }
+
+  /* Dark mode start here */
+  .dark-mood:last-child {
+    font-size: 20px;
+  }
+
+  /* section Home */
+  .my-name {
+    font-size: 27px;
+  }
+
+  .short-description {
+    font-size: 17px;
+  }
+
+  .hire-me,
+  .download-resume {
+    font-size: 17px;
+  }
+
+  .profile-pic {
+    width: 400px;
+    height: 400px;
+  }
+
+  /* section About */
+  .about-image {
+    width: 100%;
+    height: auto;
+  }
+
+  .about-me-title {
+    width: 100%;
+    font-size: 30px;
+  }
+
+  .about-me-description {
+    padding: 0px;
+    width: 100%;
+  }
+
+  /* styling qoute */
+  .jamie-blockquote {
+    padding: 10px;
+    width: 90%;
+  }
+
+  /* section resume */
+
+  /* section projects */
+
+  /* section contact */
+}
+
+
+/* Extra large devices large laptops and desktops, 1200px to up */
+@media only screen and (min-width: 1200px) {
+  /* * {
+    background-color: red;
+  } */
+}
